@@ -15,8 +15,14 @@ import           System.Environment
 
 -- | The 'Parser' type is an effectual context where you can use ENV
 -- information to build a value containing configuration information.
-newtype Parser a = Parser { parse :: IO a }
-  deriving ( Functor, Monad )
+newtype Parser a = Parser (IO a)
+instance Monad Parser
+
+-- | Runs a 'Parser' in the 'IO' monad, looking up the required environment
+-- variables and using them to build the final value. In the event that
+-- lookup fails this reports the name of the missing variable.
+parse :: Parser a -> IO (Either String a)
+parse = undefined
 
 -- | Look up a key in the ENV. This operation may fail if the key is
 -- missing.
